<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/customDialogTitle"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="italic|bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/nd"/>

            <TextView
                android:id="@+id/vND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/nb"/>

            <TextView
                android:id="@+id/vNB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/ttl"/>

            <TextView
                android:id="@+id/vTTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/al"/>

            <TextView
                android:id="@+id/vAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/jk"/>

            <TextView
                android:id="@+id/vJK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/ag"/>

            <TextView
                android:id="@+id/vAgama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/telp"/>

            <TextView
                android:id="@+id/vTelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:text="@string/em"/>

            <TextView
                android:id="@+id/vEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:id="@+id/bCustomDKembali"
                    android:layout_width="0.0dip"
                    android:layout_height="30.0pt"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/btEx"
                    android:layout_weight="0.5" />
                <Button
                    android:textStyle="bold"
                    android:id="@+id/bCustomDDaftar"
                    android:layout_width="0.0dip"
                    android:layout_height="30.0pt"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/btDaftar"
                    android:layout_weight="0.5" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</LinearLayout>